--- a/crates/testing/Cargo.toml
+++ b/crates/testing/Cargo.toml
@@ -9,6 +9,8 @@ dolos-core = { path = "../core" }
 dolos-redb3 = { path = "../redb3" }
 dolos-fjall = { path = "../fjall" }
 dolos-cardano = { path = "../cardano", features=["include-genesis"] }
+dolos-fjall = { path = "../fjall" }
+itertools.workspace = true
 rand = "0.9.1"
 hex = "0.4.3"
 bech32 = "0.9.1"
