--- a/crates/redb3/Cargo.toml
+++ b/crates/redb3/Cargo.toml
@@ -7,7 +7,10 @@ edition.workspace = true
 tracing.workspace = true
 serde.workspace = true
 tokio.workspace = true
+tokio-stream.workspace = true
 tokio-util.workspace = true
+futures-core.workspace = true
+futures-util.workspace = true
 pallas.workspace = true
 tower-http.workspace = true
 itertools.workspace = true
