--- a/crates/testing/Cargo.toml
+++ b/crates/testing/Cargo.toml
@@ -8,6 +8,7 @@ pallas.workspace = true
 dolos-core = { path = "../core" }
 dolos-redb3 = { path = "../redb3" }
 dolos-cardano = { path = "../cardano", features=["include-genesis"] }
+dolos-fjall = { path = "../fjall" }
 rand = "0.9.1"
 hex = "0.4.3"
 bech32 = "0.9.1"
@@ -15,3 +16,4 @@ tokio = { workspace = true }
 tokio-stream = { workspace = true }
 futures-core = { workspace = true }
 futures-util = { workspace = true }
+itertools = { workspace = true }
