--- a/crates/testing/Cargo.toml
+++ b/crates/testing/Cargo.toml
@@ -9,8 +9,6 @@ dolos-core = { path = "../core" }
 dolos-redb3 = { path = "../redb3" }
 dolos-fjall = { path = "../fjall" }
 dolos-cardano = { path = "../cardano", features=["include-genesis"] }
-dolos-fjall = { path = "../fjall" }
-itertools.workspace = true
 rand = "0.9.1"
 hex = "0.4.3"
 bech32 = "0.9.1"
@@ -18,4 +16,4 @@ tokio = { workspace = true }
 tokio-stream = { workspace = true }
 futures-core = { workspace = true }
 futures-util = { workspace = true }
-itertools.workspace = true
+itertools = { workspace = true }
