--- a/Cargo.toml
+++ b/Cargo.toml
@@ -122,7 +122,7 @@ name = "epoch_pots"
 path = "tests/epoch_pots/main.rs"
 
 [features]
-relaxed = ["dolos-cardano/relaxed"]
+strict = ["dolos-cardano/strict"]
 mithril = ["mithril-client"]
 utils = ["comfy-table", "inquire", "toml"]
 debug = ["console-subscriber", "tokio/tracing"]
@@ -140,7 +140,7 @@ minibf = [
 trp = ["dolos-trp"]
 
 # Default features - includes all services
-default = ["mithril", "utils", "grpc", "minibf", "trp", "relaxed"]
+default = ["mithril", "utils", "grpc", "minibf", "trp"]
 
 # The profile that 'cargo dist' will build with
 [profile.dist]
