feat: introduce comprehensive mempool support (#901)

--- a/crates/testing/Cargo.toml
+++ b/crates/testing/Cargo.toml
@@ -16,4 +16,4 @@ tokio = { workspace = true }
 tokio-stream = { workspace = true }
 futures-core = { workspace = true }
 futures-util = { workspace = true }
-itertools.workspace = true
+itertools = { workspace = true }
