--- a/Cargo.toml
+++ b/Cargo.toml
@@ -109,6 +109,7 @@ hex = { workspace = true }
 pallas = { workspace = true }
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
 stats_alloc = "0.1"
+dolos-redb3 = { path = "crates/redb3" }
 
 [[test]]
 name = "smoke"
@@ -121,6 +122,10 @@ path = "tests/epoch_pots/main.rs"
 [[test]]
 name = "memory"
 path = "tests/memory.rs"
+
+[[test]]
+name = "mempool"
+path = "tests/mempool.rs"
 
 [features]
 strict = ["dolos-cardano/strict"]
