--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ dolos-core = { path = "crates/core" }
 dolos-cardano = { path = "crates/cardano", features = ["include-genesis"] }
 dolos-redb3 = { path = "crates/redb3" }
 dolos-fjall = { path = "crates/fjall" }
+dolos-redis = { path = "crates/redis" }
 dolos-minibf = { path = "crates/minibf", optional = true }
 dolos-trp = { path = "crates/trp", optional = true }
 
@@ -158,6 +159,7 @@ members = [
     "crates/cardano",
     "crates/core",
     "crates/fjall",
+    "crates/redis",
     "crates/testing",
     "crates/minibf",
     "crates/redb3",
